generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "../docs/ERD.svg"
  theme    = "forest"
  erdEngine = "plantuml"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../docs"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

//
// ─── USER MODEL (Clerk Compatible) ────────────────────────────────────
// Clerk manages authentication, we just store user data for relationships
//

model User {
  id            String   @id // This will be the Clerk user ID
  name          String
  email         String   @unique
  emailVerified Boolean  @default(false)
  image         String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @default(now()) @updatedAt

  workspaces       Workspace[]       @relation("UserWorkspaces")
  memberships      WorkspaceMember[]
  workspaceInvites WorkspaceInvite[]
}

//
// ─── WORKSPACES & MEMBERSHIP ─────────────────────────────────────────────
//

model Workspace {
  id          String  @id @default(cuid())
  name        String
  description String?
  ownerId     String
  owner       User    @relation("UserWorkspaces", fields: [ownerId], references: [id])

  collections  Collection[]
  members      WorkspaceMember[]
  invites      WorkspaceInvite[]
  environments Environment[]

  websocketPresets WebSocketPreset[]

  // 🆕 Chat & Activity features
  chatMessages ChatMessage[]
  activityLogs ActivityLog[]

  // 🎨 Design & System Design features
  designProjects DesignProject[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([name, ownerId])
}

model WorkspaceInvite {
  id          String    @id @default(cuid())
  workspaceId String
  token       String    @unique
  expiresAt   DateTime?
  createdById String

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdBy User      @relation(fields: [createdById], references: [id], onDelete: Cascade)
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(now()) @updatedAt
}

model WebSocketPreset {
  id          String  @id @default(cuid())
  name        String
  url         String
  protocols   Json?
  params      Json?
  workspaceId String?

  workspace Workspace? @relation(fields: [workspaceId], references: [id], onDelete: SetNull)

  websocketMessages WebsocketMessage[]
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
}

enum DIRECTION {
  INCOMING
  OUTGOING
}

model WebsocketMessage {
  id           String    @id @default(cuid())
  presetId     String?
  connectionId String?
  direction    DIRECTION @default(INCOMING)
  payload      String?
  size         Int?
  timestamp    DateTime  @default(now())

  preset WebSocketPreset? @relation(fields: [presetId], references: [id], onDelete: SetNull)
  meta   Json?
}

enum MEMBER_ROLE {
  ADMIN
  EDITOR
  VIEWER
}

model WorkspaceMember {
  id   String      @id @default(cuid())
  role MEMBER_ROLE @default(ADMIN)

  userId      String
  workspaceId String

  user      User      @relation(fields: [userId], references: [id])
  workspace Workspace @relation(fields: [workspaceId], references: [id])

  roleUpgradeRequests RoleUpgradeRequest[] @relation("MemberRequests")
  createdAt           DateTime             @default(now())
  updatedAt           DateTime             @default(now()) @updatedAt

  @@unique([userId, workspaceId])
}

// Role upgrade requests (e.g., Viewer wants to become Editor)
enum REQUEST_STATUS {
  PENDING
  APPROVED
  REJECTED
}

model RoleUpgradeRequest {
  id            String         @id @default(cuid())
  workspaceId   String
  requestedById String
  requestedRole MEMBER_ROLE // What role they want
  currentRole   MEMBER_ROLE // What role they have
  message       String? // Optional message from requester
  status        REQUEST_STATUS @default(PENDING)
  reviewedById  String? // Admin who approved/rejected
  reviewedAt    DateTime?

  requestedBy WorkspaceMember @relation("MemberRequests", fields: [requestedById], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([workspaceId, status])
}

// Workspace activity logs
enum ACTIVITY_TYPE {
  MEMBER_JOINED
  MEMBER_LEFT
  MEMBER_REMOVED
  ROLE_CHANGED
  ROLE_REQUESTED
  ROLE_REQUEST_APPROVED
  ROLE_REQUEST_REJECTED
  COLLECTION_CREATED
  COLLECTION_DELETED
  REQUEST_CREATED
  REQUEST_UPDATED
  REQUEST_DELETED
  MESSAGE_SENT
}

model WorkspaceActivity {
  id          String        @id @default(cuid())
  workspaceId String
  userId      String // Who performed the action
  type        ACTIVITY_TYPE
  description String // Human-readable description
  metadata    Json? // Additional data

  createdAt DateTime @default(now())

  @@index([workspaceId, createdAt])
}

//
// ─── COLLECTIONS & REQUESTS ──────────────────────────────────────────────
//

model Collection {
  id   String @id @default(cuid())
  name String

  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  requests    Request[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

enum REST_METHOD {
  GET
  POST
  PUT
  PATCH
  DELETE
}

model Request {
  id         String      @id @default(cuid())
  name       String
  method     REST_METHOD @default(GET)
  url        String
  parameters Json?
  headers    Json? // e.g. {"Content-Type": "application/json"}

  body     Json? // request body (JSON / text)
  response Json? // optional: save last response

  collectionId String
  collection   Collection   @relation(fields: [collectionId], references: [id], onDelete: Cascade)
  runs         RequestRun[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model RequestRun {
  id String @id @default(cuid())

  requestId String
  request   Request @relation(fields: [requestId], references: [id], onDelete: Cascade)

  status     Int
  statusText String?
  headers    Json?
  body       String? // raw text or JSON string
  durationMs Int?

  createdAt DateTime @default(now())
}

//
// ─── ENVIRONMENTS ───────────────────────────────────────────────────────
//

model Environment {
  id     String @id @default(cuid())
  name   String
  values Json // e.g. { "BASE_URL": "https://api.example.com", "AUTH": "Bearer xxx" }

  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
}

//
// ─── 🆕 COLLABORATIVE CHAT SYSTEM ────────────────────────────────────────
//

enum MessageType {
  TEXT
  CODE
  FILE
  SYSTEM
  AI_RESPONSE
}

// Main chat message model with AI support
model ChatMessage {
  id          String      @id @default(cuid())
  workspaceId String
  userId      String? // Null for system/AI messages
  content     String      @db.Text
  type        MessageType @default(TEXT)

  // AI features
  aiResponse Boolean @default(false)
  aiModel    String? // e.g., "gemini-2.0-flash"
  aiPrompt   String? @db.Text // Original prompt for AI messages

  // Code context (for code snippets and reviews)
  codeLanguage String? // e.g., "typescript", "javascript"
  githubUrl    String? // GitHub repo URL if AI review was from repo

  // Threading
  parentId String? // For threaded replies
  parent   ChatMessage?  @relation("MessageThread", fields: [parentId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  replies  ChatMessage[] @relation("MessageThread")

  // Reactions
  reactions MessageReaction[]

  // Attachments
  attachmentUrl  String? // S3 or cloud storage URL
  attachmentName String?
  attachmentType String? // file extension or MIME type
  attachmentSize Int? // bytes

  // Deletion tracking
  deletedForEveryone Boolean @default(false)
  deletedForUsers    Json? // Array of user IDs who deleted this message for themselves

  // Metadata
  metadata Json? // For extensibility

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([workspaceId, createdAt])
  @@index([parentId])
  @@index([userId, workspaceId])
}

// Emoji reactions on messages
model MessageReaction {
  id        String @id @default(cuid())
  messageId String
  userId    String
  emoji     String // e.g., "👍", "❤️", "🧠"

  message ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@unique([messageId, userId, emoji])
  @@index([messageId])
}

//
// ─── 🆕 ACTIVITY LOGS SYSTEM ─────────────────────────────────────────────
//

enum LogType {
  TEST_RUN
  COLLECTION_RUN
  ERROR
  SYSTEM
  DEPLOYMENT
  BUILD
  API_CALL
}

// Comprehensive activity logging
model ActivityLog {
  id          String  @id @default(cuid())
  workspaceId String
  userId      String? // Null for system events
  type        LogType
  title       String // Short description
  details     Json // Full log data

  // Test run specific
  status     String? // "success", "failed", "error"
  duration   Int? // milliseconds
  statusCode Int? // HTTP status

  // Links
  requestId     String? // Link to Request if applicable
  collectionId  String? // Link to Collection if applicable
  relatedChatId String? // Link to chat message if posted to chat

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@index([workspaceId, createdAt])
  @@index([userId, createdAt])
  @@index([type, workspaceId])
}

//
// ─── 🆕 AI CODE REVIEW SYSTEM ────────────────────────────────────────────
//

enum ReviewType {
  EMPATHETIC
  GITHUB_REPO
  GENERAL
}

enum ReviewSessionType {
  PROJECT_BASED // Review belongs to a project
  STANDALONE // Quick review without project
}

// Code Review Projects (like Collections for API testing)
model CodeReviewProject {
  id          String  @id @default(cuid())
  workspaceId String
  name        String
  description String?
  createdBy   String

  // Hierarchical structure - sessions belong to projects
  sessions CodeReviewSession[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([workspaceId])
  @@index([createdBy])
}

// Code Review Sessions (like Requests in Collections)
// Each session represents one review with its history
model CodeReviewSession {
  id          String @id @default(cuid())
  workspaceId String
  userId      String

  // Project association (optional for standalone reviews)
  projectId String?
  project   CodeReviewProject? @relation(fields: [projectId], references: [id], onDelete: Cascade)

  sessionType ReviewSessionType @default(STANDALONE)
  reviewType  ReviewType

  // Session metadata
  name        String // e.g., "Login Component Review", "API Refactoring"
  description String?

  // Original code/files being reviewed
  code       String? @db.Text
  language   String?
  filesPaths Json? // Array of file paths for GitHub reviews

  // Review configuration
  tone  String? // "gentle", "balanced", "direct"
  model String // AI model used

  // Comments/feedback being transformed
  originalComments Json? // Array of harsh comments

  // History of review iterations
  logs CodeReviewLog[]

  // Metadata
  tags       Json? // Array of tags for categorization
  isFavorite Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([workspaceId])
  @@index([userId])
  @@index([projectId])
  @@index([sessionType])
}

// Code Review Logs (history of each review iteration)
// Like RequestRun for API requests
model CodeReviewLog {
  id        String            @id @default(cuid())
  sessionId String
  session   CodeReviewSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  // Review execution details
  response String  @db.Text // AI-generated review
  model    String // Model used for this iteration
  tone     String? // Tone used
  duration Int? // milliseconds

  // Snapshot of inputs at time of review
  codeSnapshot     String? @db.Text
  commentsSnapshot Json? // Comments at time of review

  // Execution metadata
  status String  @default("success") // "success", "failed", "error"
  error  String? @db.Text

  createdAt DateTime @default(now())

  @@index([sessionId, createdAt])
  @@index([status])
}

//
// ─── DESIGN SYSTEM & COLLABORATION ──────────────────────────────────────
//

enum DesignRole {
  OWNER
  DESIGNER
  COLLABORATOR
  VIEWER
}

enum ExportFormat {
  PNG
  SVG
  PDF
  FIG
  JSON
  REACT
}

enum SuggestionType {
  COLOR_PALETTE
  TYPOGRAPHY
  SPACING
  ACCESSIBILITY
  COMPONENT
  LAYOUT
  COPY
}

// Design Projects (top-level container)
model DesignProject {
  id          String    @id @default(cuid())
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  name        String
  description String? @db.Text
  ownerId     String

  // Organization
  files       DesignFile[]
  permissions DesignPermission[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([workspaceId])
  @@index([ownerId])
}

// Design Files (individual design documents)
model DesignFile {
  id        String        @id @default(cuid())
  projectId String
  project   DesignProject @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // File metadata
  title        String
  description  String? @db.Text
  thumbnailUrl String?

  // Figma integration
  figmaFileId       String?   @unique
  figmaFileKey      String?
  figmaNodeId       String? // Specific node/frame if applicable
  connectedByUserId String?
  lastSyncedAt      DateTime?

  // Versioning
  latestVersionId String?
  versions        DesignVersion[]

  // Collaboration
  comments    DesignComment[]
  suggestions AISuggestion[]
  permissions DesignPermission[]

  // Metadata
  metadata Json? // Layer structure, components, etc.
  tags     Json? // Array of tags

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([projectId])
  @@index([figmaFileId])
  @@index([connectedByUserId])
}

// Design Versions (snapshots/history)
model DesignVersion {
  id     String     @id @default(cuid())
  fileId String
  file   DesignFile @relation(fields: [fileId], references: [id], onDelete: Cascade)

  versionTag  String // v1.0, v1.1, etc.
  description String? @db.Text

  // Snapshot data
  snapshotUrl  String? // URL to full snapshot image/data
  thumbnailUrl String?
  metadata     Json? // Full metadata snapshot

  // Exports attached to this version
  exports DesignExport[]

  createdBy String
  createdAt DateTime @default(now())

  @@index([fileId, createdAt])
  @@index([createdBy])
}

// Design Comments (inline feedback)
model DesignComment {
  id     String     @id @default(cuid())
  fileId String
  file   DesignFile @relation(fields: [fileId], references: [id], onDelete: Cascade)

  // Comment location
  nodeId    String? // Figma node ID or layer ID
  positionX Float? // Canvas position
  positionY Float?

  // Content
  userId     String
  content    String    @db.Text
  resolved   Boolean   @default(false)
  resolvedBy String?
  resolvedAt DateTime?

  // Threading (optional)
  parentId String?
  replies  DesignComment[] @relation("CommentReplies")
  parent   DesignComment?  @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([fileId, resolved])
  @@index([userId])
  @@index([parentId])
}

// AI Design Suggestions (Gemini-powered)
model AISuggestion {
  id     String     @id @default(cuid())
  fileId String
  file   DesignFile @relation(fields: [fileId], references: [id], onDelete: Cascade)

  nodeId         String? // Target node/frame
  suggestionType SuggestionType

  // Suggestion content
  title       String
  description String? @db.Text
  payload     Json // Structured suggestion data (colors, tokens, code, etc.)

  // User interaction
  accepted   Boolean   @default(false)
  acceptedBy String?
  acceptedAt DateTime?

  // Applied to version
  appliedToVersionId String?

  createdAt DateTime @default(now())

  @@index([fileId, suggestionType])
  @@index([accepted])
}

// Design Exports (generated assets)
model DesignExport {
  id        String        @id @default(cuid())
  versionId String
  version   DesignVersion @relation(fields: [versionId], references: [id], onDelete: Cascade)

  format   ExportFormat
  fileUrl  String // S3/CDN URL
  fileName String
  fileSize Int? // bytes

  // Export metadata
  options Json? // Export settings used

  // Access
  downloadCount Int @default(0)

  createdBy String
  createdAt DateTime @default(now())

  @@index([versionId, format])
  @@index([createdBy])
}

// Design Permissions (RBAC for files and projects)
model DesignPermission {
  id String @id @default(cuid())

  // Resource (project OR file)
  resourceType String // "project" or "file"
  projectId    String?
  project      DesignProject? @relation(fields: [projectId], references: [id], onDelete: Cascade)
  fileId       String?
  file         DesignFile?    @relation(fields: [fileId], references: [id], onDelete: Cascade)

  // User or team
  userId String
  role   DesignRole

  grantedBy String
  grantedAt DateTime @default(now())

  @@unique([resourceType, projectId, fileId, userId])
  @@index([userId, role])
  @@index([projectId])
  @@index([fileId])
}

// Design Shares (public/private share links)
